# flight-dispatcher

./: CMakeLists.txt  README.md  aircrafts.json  airports.json  main.cpp  tastatura.txt  waypoints.json  waypointsAdjacency.json
header/: Aircraft.h  AircraftFactory.h  Airport.h  CargoAircraft.h  Exceptions.h  FighterJet.h  FuelManagement.h  GeneralAviationAircraft.h  JsonUtils.h  Menu.h  Metar.h  PassengerAircraft.h  PerformanceCalculation.h  Route.h  Runway.h  VectorUtils.h  Waypoint.h  WaypointBuilder.h  Weather.h
source/: Aircraft.cpp  AircraftFactory.cpp  Airport.cpp  CargoAircraft.cpp  Exceptions.cpp  FighterJet.cpp  FuelManagement.cpp  GeneralAviationAircraft.cpp  JsonUtils.cpp  JsonUtilsImpl.cpp  Menu.cpp  Metar.cpp  PassengerAircraft.cpp  PerformanceCalculation.cpp  Route.cpp  Runway.cpp  VectorUtils.cpp  VectorUtilsImpl.cpp  Waypoint.cpp  WaypointBuilder.cpp  Weather.cpp
